# make-pretty

./: .gitattributes  README.md
agentbeats/: README.md  main.py  pyproject.toml
agentbeats/a1/: main.py  run.sh
agentbeats/a2/: main.py
agentbeats/src/: launcher.py
agentbeats/src/green_agent/: agent.py  ppt_green_agent.toml
agentbeats/src/white_agent/: agent.py
benchmark/: .env  changeset-schema.yaml  master-analysis.md  package-lock.json  package.json  vitest.config.ts
benchmark/evaluation/: schemas.ts
benchmark/evaluation/llm-judge/: README.md  index.ts
benchmark/evaluation/validation/: TUTORIAL.md  bar-percentage.test.ts  boundary.test.ts  count-shapes.test.ts  count-slides.test.ts  equality.test.ts  filtered-equality.test.ts  filtered-spacing.test.ts  includes.test.ts  index.ts  line-validation.test.ts  llm-judge.test.ts  numerical-value.test.ts  slide-fill-distribution.test.ts  spacing.test.ts  utils.ts  value.test.ts
benchmark/prompts/: alignment.md  hirachy.md  prompt.md  prompt_v0.md
benchmark/runtime/: README.md  index.ts  routes.ts  scenarios.ts  server.ts  service.ts  types.ts
benchmark/scenarios/: config.test.ts  scenario.test.ts
benchmark/scripts/: run-llm-judge.ts  run-scenario.ts  validate-generated.ts
benchmark/tests/: inject.test.ts
benchmark/tools/: alignment-functions.test.ts  flex-layouting.test.ts  flex-layouting.ts
benchmark/tools/alignment/: index.ts  tests.ts
benchmark/white-agents/: README.md  coordinate-yaml.ts  coordinate.yaml  coordinate_old.yaml  helpers.ts
benchmark/white-agents/agents/: index.ts
(+1147 files in other folders)
