[project]
name = "agentbeats-ppt-benchmark"
version = "0.1.0"
description = "AgentBeats green/white agents for the PowerPoint benchmark."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "dotenv>=0.9.9",
    "earthshaker>=0.1.12",
    "litellm>=1.80.0",
    "pydantic-settings>=2.11.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
]

